// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrismaClient where Case inrelevant Json: not 1`] = `
Array [
  Object {
    "e_id": 2,
    "json": Object {
      "data": "second",
    },
    "userId": 2,
    "value": "value 2",
  },
]
`;

exports[`PrismaClient where Case inrelevant Nested deep 1`] = `
Array [
  Object {
    "accountId": 2,
    "clicks": null,
    "deleted": false,
    "id": 2,
    "name": "Dirk",
    "role": "ADMIN",
    "sort": null,
    "uniqueField": "user 2",
  },
]
`;

exports[`PrismaClient where Case inrelevant date 1`] = `
Array [
  Object {
    "authorId": null,
    "created": 2020-02-01T14:00:00.000Z,
    "id": 1,
    "published": false,
    "title": "Piet",
    "updated": 2020-02-01T14:00:00.000Z,
  },
]
`;

exports[`PrismaClient where Case inrelevant gt 1`] = `
Array [
  Object {
    "id": 2,
    "name": "Dirk",
    "sort": null,
  },
  Object {
    "id": 3,
    "name": "Sjors",
    "sort": null,
  },
  Object {
    "id": 4,
    "name": "ABBY",
    "sort": null,
  },
  Object {
    "id": 5,
    "name": null,
    "sort": null,
  },
]
`;

exports[`PrismaClient where Case inrelevant gte 1`] = `
Array [
  Object {
    "id": 1,
    "name": "Piet",
    "sort": null,
  },
  Object {
    "id": 2,
    "name": "Dirk",
    "sort": null,
  },
  Object {
    "id": 3,
    "name": "Sjors",
    "sort": null,
  },
  Object {
    "id": 4,
    "name": "ABBY",
    "sort": null,
  },
  Object {
    "id": 5,
    "name": null,
    "sort": null,
  },
]
`;

exports[`PrismaClient where Case inrelevant lt 1`] = `
Array [
  Object {
    "id": 1,
    "name": "Piet",
    "sort": null,
  },
]
`;

exports[`PrismaClient where Case inrelevant lte 1`] = `
Array [
  Object {
    "id": 1,
    "name": "Piet",
    "sort": null,
  },
  Object {
    "id": 2,
    "name": "Dirk",
    "sort": null,
  },
]
`;

exports[`PrismaClient where Case inrelevant not 1`] = `
Array [
  Object {
    "id": 1,
    "name": "Piet",
    "sort": null,
  },
  Object {
    "id": 3,
    "name": "Sjors",
    "sort": null,
  },
  Object {
    "id": 4,
    "name": "ABBY",
    "sort": null,
  },
  Object {
    "id": 5,
    "name": null,
    "sort": null,
  },
]
`;

exports[`PrismaClient where caseInsensitive false No mode AND (failing) 1`] = `Array []`;

exports[`PrismaClient where caseInsensitive false No mode AND 1`] = `
Array [
  Object {
    "id": 2,
    "name": "Dirk",
    "sort": null,
  },
]
`;

exports[`PrismaClient where caseInsensitive false No mode Json: equals 1`] = `
Array [
  Object {
    "e_id": 1,
    "json": Object {
      "data": "first",
    },
    "userId": 1,
    "value": "value 1",
  },
]
`;

exports[`PrismaClient where caseInsensitive false No mode NOT array 1`] = `
Array [
  Object {
    "id": 3,
    "name": "Sjors",
    "sort": null,
  },
  Object {
    "id": 4,
    "name": "ABBY",
    "sort": null,
  },
]
`;

exports[`PrismaClient where caseInsensitive false No mode NOT object 1`] = `
Array [
  Object {
    "id": 1,
    "name": "Piet",
    "sort": null,
  },
  Object {
    "id": 3,
    "name": "Sjors",
    "sort": null,
  },
  Object {
    "id": 4,
    "name": "ABBY",
    "sort": null,
  },
]
`;

exports[`PrismaClient where caseInsensitive false No mode Nested 1`] = `
Array [
  Object {
    "accountId": 2,
    "clicks": null,
    "deleted": false,
    "id": 2,
    "name": "Dirk",
    "role": "ADMIN",
    "sort": null,
    "uniqueField": "user 2",
  },
]
`;

exports[`PrismaClient where caseInsensitive false No mode OR 1`] = `
Array [
  Object {
    "id": 1,
    "name": "Piet",
    "sort": null,
  },
  Object {
    "id": 2,
    "name": "Dirk",
    "sort": null,
  },
]
`;

exports[`PrismaClient where caseInsensitive false No mode in (nested) 1`] = `
Array [
  Object {
    "accountId": 1,
    "clicks": null,
    "deleted": false,
    "id": 1,
    "name": "Henk",
    "role": "ADMIN",
    "sort": null,
    "uniqueField": "user 1",
  },
]
`;

exports[`PrismaClient where caseInsensitive false No mode in 1`] = `
Array [
  Object {
    "id": 1,
    "name": "Piet",
    "sort": null,
  },
  Object {
    "id": 3,
    "name": "Sjors",
    "sort": null,
  },
]
`;

exports[`PrismaClient where caseInsensitive false No mode multiple 1`] = `Array []`;

exports[`PrismaClient where caseInsensitive false No mode notIn 1`] = `
Array [
  Object {
    "id": 2,
    "name": "Dirk",
    "sort": null,
  },
  Object {
    "id": 4,
    "name": "ABBY",
    "sort": null,
  },
]
`;

exports[`PrismaClient where caseInsensitive false mode false contains 1`] = `
Array [
  Object {
    "id": 4,
    "name": "ABBY",
    "sort": null,
  },
]
`;

exports[`PrismaClient where caseInsensitive false mode false endsWith 1`] = `
Array [
  Object {
    "id": 2,
    "name": "Dirk",
    "sort": null,
  },
]
`;

exports[`PrismaClient where caseInsensitive false mode false equals 1`] = `
Array [
  Object {
    "id": 2,
    "name": "Dirk",
    "sort": null,
  },
]
`;

exports[`PrismaClient where caseInsensitive false mode false startsWith 1`] = `
Array [
  Object {
    "id": 2,
    "name": "Dirk",
    "sort": null,
  },
]
`;

exports[`PrismaClient where caseInsensitive false mode true contains 1`] = `
Array [
  Object {
    "id": 4,
    "name": "ABBY",
    "sort": null,
  },
]
`;

exports[`PrismaClient where caseInsensitive false mode true endsWith 1`] = `
Array [
  Object {
    "id": 2,
    "name": "Dirk",
    "sort": null,
  },
]
`;

exports[`PrismaClient where caseInsensitive false mode true equals 1`] = `
Array [
  Object {
    "id": 2,
    "name": "Dirk",
    "sort": null,
  },
]
`;

exports[`PrismaClient where caseInsensitive false mode true startsWith 1`] = `
Array [
  Object {
    "id": 2,
    "name": "Dirk",
    "sort": null,
  },
]
`;

exports[`PrismaClient where caseInsensitive true No mode AND (failing) 1`] = `Array []`;

exports[`PrismaClient where caseInsensitive true No mode AND 1`] = `
Array [
  Object {
    "id": 2,
    "name": "Dirk",
    "sort": null,
  },
]
`;

exports[`PrismaClient where caseInsensitive true No mode Json: equals 1`] = `
Array [
  Object {
    "e_id": 1,
    "json": Object {
      "data": "first",
    },
    "userId": 1,
    "value": "value 1",
  },
]
`;

exports[`PrismaClient where caseInsensitive true No mode NOT array 1`] = `
Array [
  Object {
    "id": 3,
    "name": "Sjors",
    "sort": null,
  },
  Object {
    "id": 4,
    "name": "ABBY",
    "sort": null,
  },
  Object {
    "id": 5,
    "name": null,
    "sort": null,
  },
]
`;

exports[`PrismaClient where caseInsensitive true No mode NOT object 1`] = `
Array [
  Object {
    "id": 1,
    "name": "Piet",
    "sort": null,
  },
  Object {
    "id": 3,
    "name": "Sjors",
    "sort": null,
  },
  Object {
    "id": 4,
    "name": "ABBY",
    "sort": null,
  },
]
`;

exports[`PrismaClient where caseInsensitive true No mode Nested 1`] = `
Array [
  Object {
    "accountId": 2,
    "clicks": null,
    "deleted": false,
    "id": 2,
    "name": "Dirk",
    "role": "ADMIN",
    "sort": null,
    "uniqueField": "user 2",
  },
]
`;

exports[`PrismaClient where caseInsensitive true No mode OR 1`] = `
Array [
  Object {
    "id": 1,
    "name": "Piet",
    "sort": null,
  },
  Object {
    "id": 2,
    "name": "Dirk",
    "sort": null,
  },
]
`;

exports[`PrismaClient where caseInsensitive true No mode in (nested) 1`] = `
Array [
  Object {
    "accountId": 1,
    "clicks": null,
    "deleted": false,
    "id": 1,
    "name": "Henk",
    "role": "ADMIN",
    "sort": null,
    "uniqueField": "user 1",
  },
]
`;

exports[`PrismaClient where caseInsensitive true No mode in 1`] = `
Array [
  Object {
    "id": 1,
    "name": "Piet",
    "sort": null,
  },
  Object {
    "id": 3,
    "name": "Sjors",
    "sort": null,
  },
]
`;

exports[`PrismaClient where caseInsensitive true No mode multiple 1`] = `Array []`;

exports[`PrismaClient where caseInsensitive true No mode notIn 1`] = `
Array [
  Object {
    "id": 2,
    "name": "Dirk",
    "sort": null,
  },
  Object {
    "id": 4,
    "name": "ABBY",
    "sort": null,
  },
]
`;

exports[`PrismaClient where caseInsensitive true mode false contains 1`] = `
Array [
  Object {
    "id": 4,
    "name": "ABBY",
    "sort": null,
  },
]
`;

exports[`PrismaClient where caseInsensitive true mode false endsWith 1`] = `
Array [
  Object {
    "id": 2,
    "name": "Dirk",
    "sort": null,
  },
]
`;

exports[`PrismaClient where caseInsensitive true mode false equals 1`] = `
Array [
  Object {
    "id": 2,
    "name": "Dirk",
    "sort": null,
  },
]
`;

exports[`PrismaClient where caseInsensitive true mode false startsWith 1`] = `
Array [
  Object {
    "id": 2,
    "name": "Dirk",
    "sort": null,
  },
]
`;

exports[`PrismaClient where caseInsensitive true mode true contains 1`] = `
Array [
  Object {
    "id": 4,
    "name": "ABBY",
    "sort": null,
  },
]
`;

exports[`PrismaClient where caseInsensitive true mode true endsWith 1`] = `
Array [
  Object {
    "id": 2,
    "name": "Dirk",
    "sort": null,
  },
]
`;

exports[`PrismaClient where caseInsensitive true mode true equals 1`] = `
Array [
  Object {
    "id": 2,
    "name": "Dirk",
    "sort": null,
  },
]
`;

exports[`PrismaClient where caseInsensitive true mode true startsWith 1`] = `
Array [
  Object {
    "id": 2,
    "name": "Dirk",
    "sort": null,
  },
]
`;
